--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hack_asm"
 author = "phoony"
-version = "0.3.0-dev"
+version = "1.0.0"
 edition = "2021"
 license = "MIT"
 description = "A Nand2Tetris Hack Assembly Language Assembler written in Rust"
@@ -15,3 +15,4 @@ thiserror = "1.0.31"
 pest = "2.1.3"
 pest_derive = "2.1.0"
 phf = { version = "0.10.1", features = ["macros"] }
+clap = { version = "3.1.18", features = ["derive"] }
